[gd_scene load_steps=14 format=3 uid="uid://biyun1053onpb"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_ekicg"]
[ext_resource type="PackedScene" uid="uid://cen0q4ur46sr5" path="res://scenes/player.tscn" id="1_hp3tu"]
[ext_resource type="PackedScene" uid="uid://i7niu5h5meik" path="res://scenes/ui/hud.tscn" id="4_cmv3r"]
[ext_resource type="PackedScene" uid="uid://cxn4ieotiqnef" path="res://scenes/enemies/shooting_enemy.tscn" id="4_nn056"]
[ext_resource type="Texture2D" uid="uid://c12plrbkrix75" path="res://assets/background2.png" id="6_wj4qc"]
[ext_resource type="PackedScene" uid="uid://bm3di23c6igmh" path="res://scenes/enemies/chasing_enemy.tscn" id="7_x5lo1"]
[ext_resource type="PackedScene" uid="uid://boauivelqg6pe" path="res://scenes/ui/game_over.tscn" id="8_t7hvw"]
[ext_resource type="AudioStream" uid="uid://bql2lb0a0ptc5" path="res://assets/sounds/enemyDestroyed.mp3" id="9_cp7af"]
[ext_resource type="PackedScene" uid="uid://chg7urcjqjycv" path="res://scenes/enemies/sprinkle_enemy.tscn" id="9_w66k4"]
[ext_resource type="PackedScene" uid="uid://chrx3g350ke3y" path="res://scenes/ui/main menu.tscn" id="10_gm46e"]
[ext_resource type="AudioStream" uid="uid://kcu4m6mjowpy" path="res://assets/sounds/battletheme02.mp3" id="10_p2ayj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_duuom"]
size = Vector2(3811, 2090)

[sub_resource type="Curve2D" id="Curve2D_8ofvs"]
_data = {
"points": PackedVector2Array(-5.19131, -0.471937, 5.19131, 0.471937, -457.844, -302.926, 0, 0, 0, 0, -350.324, -315.043, 0, 0, 0, 0, -273.596, -324.526, 0, 0, 0, 0, -173.647, -315.043, 0, 0, 0, 0, -54.0124, -319.785, 0, 0, 0, 0, 41.3928, -307.668, 0, 0, 0, 0, 134.779, -313.463, 0, 0, 0, 0, 257.443, -310.302, 0, 0, 0, 0, 343.762, -315.043, 0, 0, 0, 0, 411.908, -311.882, 0, 0, 0, 0, 485.104, -312.409, 0, 0, 0, 0, 489.142, -240.761, 0, 0, 0, 0, 493.18, -149.093, 0, 0, 0, 0, 493.18, -67.4341, 0, 0, 0, 0, 501.257, 25.2878, 0, 0, 0, 0, 494.695, 90.0877, 0, 0, 0, 0, 490.656, 164.371, 0, 0, 0, 0, 494.695, 219.161, 0, 0, 0, 0, 493.18, 266.049, 0, 0, 0, 0, 457.845, 285.541, 0, 0, 0, 0, 401.308, 290.809, 0, 0, 0, 0, 321.046, 290.809, 0, 0, 0, 0, 239.27, 289.229, 0, 0, 0, 0, 180.21, 287.648, 0, 0, 0, 0, 89.8526, 289.229, 0, 0, 0, 0, -4.03827, 282.907, 0, 0, 0, 0, -102.472, 284.487, 0, 0, 0, 0, -173.647, 289.229, 0, 0, 0, 0, -234.222, 289.229, 0, 0, 0, 0, -309.941, 289.229, 0, 0, 0, 0, -376.068, 287.648, 0, 0, 0, 0, -436.643, 303.453, 0, 0, 0, 0, -520.439, 272.897, 0, 0, 0, 0, -512.362, 203.883, 0, 0, 0, 0, -516.401, 139.083, 0, 0, 0, 0, -512.362, 64.7999, 0, 0, 0, 0, -520.439, -12.6439, 0, 0, 0, 0, -520.439, -90.0877, 0, 0, 0, 0, -516.401, -144.878, 0, 0, 0, 0, -520.439, -191.239, 0, 0, 0, 0, -513.372, -236.546, 0, 0, 0, 0, -521.449, -287.122, 0, 0, 0, 0, -472.988, -287.122, 0, 0, 0, 0, -457.844, -302.926)
}
point_count = 44

[node name="main" type="Node2D"]
script = ExtResource("1_ekicg")
player_scene = ExtResource("1_hp3tu")
chasing_enemy_scene = ExtResource("7_x5lo1")
shooter_enemy_scene = ExtResource("4_nn056")
sprinkle_enemy_scene = ExtResource("9_w66k4")

[node name="background" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
position = Vector2(2098, 899)
scale = Vector2(2, 2)
texture = ExtResource("6_wj4qc")
region_enabled = true
region_rect = Rect2(-4941.11, -2543.67, 11088.2, 6152.61)

[node name="SpawnPosition" type="Marker2D" parent="."]
position = Vector2(1893, 1034)

[node name="PlayableArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayableArea"]
position = Vector2(1895.5, 1035)
shape = SubResource("RectangleShape2D_duuom")
debug_color = Color(0.669448, 0.508247, 0, 0.109804)
metadata/_edit_lock_ = true

[node name="hud" parent="." instance=ExtResource("4_cmv3r")]

[node name="SpawnPath" type="Path2D" parent="."]
position = Vector2(1894, 1034)
scale = Vector2(1.98102, 1.89815)
curve = SubResource("Curve2D_8ofvs")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="SpawnPath"]
position = Vector2(-457.844, -302.926)
rotation = 0.0906572

[node name="ChaserSpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="ShooterSpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="SprinkleSpawnTimer" type="Timer" parent="."]
wait_time = 7.0

[node name="BombSpawnTimer" type="Timer" parent="."]

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="EnemyExplode" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_cp7af")
volume_db = -20.0
parameters/looping = false

[node name="MainMenu" parent="." instance=ExtResource("10_gm46e")]
visible = false

[node name="GameOver" parent="." instance=ExtResource("8_t7hvw")]
visible = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_p2ayj")
volume_db = -10.0
parameters/looping = true

[connection signal="area_exited" from="PlayableArea" to="." method="_on_playable_area_area_exited"]
[connection signal="body_entered" from="PlayableArea" to="." method="_on_playable_area_body_entered"]
[connection signal="body_exited" from="PlayableArea" to="." method="_on_playable_area_body_exited"]
[connection signal="timeout" from="ChaserSpawnTimer" to="." method="_on_chaser_spawn_timer_timeout"]
[connection signal="timeout" from="ShooterSpawnTimer" to="." method="_on_shooter_spawn_timer_timeout"]
[connection signal="timeout" from="SprinkleSpawnTimer" to="." method="_on_sprinkle_spawn_timer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_difficulty_timer_timeout"]
